--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     crossorigin="anonymous"
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="weather-app">
+        <h1>Johannesburg</h1>
+        <div>
+          <ul>
+            <li class="temperature">27°</li>
+            <li class="description">Mostly Sunny</li>
+            <li class="level">H:27° L:11°</li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
