fixeed some typos

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h1>Johannesburg</h1>
         <div>
           <ul>
-            <li class="temperature">27°</li>
-            <li class="description">Mostly Sunny</li>
-            <li class="level">H:27° L:11°</li>
+            <li id="temperature">27°</li>
+            <li id="description">Mostly Sunny</li>
+            <li id="level">H:27° L:11°</li>
           </ul>
         </div>
       </div>
