--- a/index.html
+++ b/index.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Johannesburg</h1>
-        <div>
-          <ul>
-            <li id="temperature">27°</li>
-            <li id="description">Mostly Sunny</li>
-            <li id="level">H:27° L:11°</li>
-          </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <h1 id="city">Johannesburg</h1>
+          <div>
+            <ul id="details">
+              <li id="temperature">27°</li>
+              <li id="description">Mostly Sunny</li>
+              <li id="level">H:27° L:11°</li>
+            </ul>
+          </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/lungelohadebe98/weather-app"
+            target="_blank"
+            >open-source code</a
+          >
+          by Lungelo Hadebe</small
+        >
       </div>
     </div>
     <script src="script.js"></script>
