--- a/index.html
+++ b/index.html
@@ -25,6 +25,66 @@
               <li id="level">H:27° L:11°</li>
             </ul>
           </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-2">
+                <div class="day">Today</div>
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  alt="weather-icon"
+                  id="icon"
+                />
+              </div>
+
+              <div class="col-2">
+                <div class="day">Mon</div>
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  alt="weather-icon"
+                  id="icon"
+                />
+              </div>
+              <div class="col-2">
+                <div class="day">Tues</div>
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  alt="weather-icon"
+                  id="icon"
+                />
+              </div>
+              <div class="col-2">
+                <div class="day">Wed</div>
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  alt="weather-icon"
+                  id="icon"
+                />
+              </div>
+              <div class="col-2">
+                <div class="day">Thurs</div>
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  alt="weather-icon"
+                  id="icon"
+                />
+              </div>
+              <div class="col-2">
+                <div class="day">Fri</div>
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  alt="weather-icon"
+                  id="icon"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="wrapper">
+            <div class="wind">Wind 21km/h</div>
+            <div class="temp">
+              Feels like
+              <div class="exp">16°</div>
+            </div>
+          </div>
         </div>
         <small>
           <a
