--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       crossorigin="anonymous"
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css" />
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -43,17 +45,24 @@
               <li id="level">H:27° L:11°</li>
             </ul>
           </div>
+          <div class="wind">Wind: 21km/h</div>
+          <div class="Precipitation">Precipitation: 0mm</div>
+          <br />
           <div class="container">
             <div class="row">
               <div class="col-2">
                 <div class="day">Today</div>
-                <i class="wi wi-day-sunny"></i>
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  alt="weather-icon"
+                  id="icon"
+                />
               </div>
 
               <div class="col-2">
                 <div class="day">Mon</div>
                 <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/shower-rain-day.png"
                   alt="weather-icon"
                   id="icon"
                 />
@@ -61,7 +70,7 @@
               <div class="col-2">
                 <div class="day">Tues</div>
                 <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/thunderstorm-day.png"
                   alt="weather-icon"
                   id="icon"
                 />
@@ -69,7 +78,7 @@
               <div class="col-2">
                 <div class="day">Wed</div>
                 <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
                   alt="weather-icon"
                   id="icon"
                 />
@@ -77,7 +86,7 @@
               <div class="col-2">
                 <div class="day">Thurs</div>
                 <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png"
                   alt="weather-icon"
                   id="icon"
                 />
@@ -85,18 +94,11 @@
               <div class="col-2">
                 <div class="day">Fri</div>
                 <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
                   alt="weather-icon"
                   id="icon"
                 />
               </div>
-            </div>
-          </div>
-          <div class="wrapper">
-            <div class="wind">Wind 21km/h</div>
-            <div class="temp">
-              Feels like
-              <div class="exp">16°</div>
             </div>
           </div>
         </div>
@@ -104,9 +106,9 @@
           <a
             href="https://github.com/lungelohadebe98/weather-app"
             target="_blank"
-            >open-source code</a
+            >open-sourced on GitHub</a
           >
-          by Lungelo Hadebe</small
+          by Lungelo Hadebe and hosted on Netlify</small
         >
       </div>
     </div>
