--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
               </div>
             </div>
           </form>
+          <br />
           <h1 id="city">Johannesburg</h1>
           <div>
             <ul id="details">
               <li id="temperature">27°</li>
               <li id="description">Mostly Sunny</li>
               <li id="wind">Wind: 21km/h</li>
+              <li id="Precipitation">Precipitation: 0mm</li>
             </ul>
           </div>
-          <div class="Precipitation">Precipitation: 0mm</div>
+
           <br />
           <div class="container">
             <div class="row">
