--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Playpen+Sans&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css" />
 
@@ -42,7 +48,7 @@
           <h1 id="city">Johannesburg</h1>
           <div>
             <ul id="details">
-              <li id="temperature">27°</li>
+              <li id="temperature">27<span>°C</span></li>
               <li id="description">Mostly Sunny</li>
               <li id="wind">Wind: 21km/h</li>
               <li id="Precipitation">Precipitation: 0mm</li>
@@ -110,7 +116,10 @@
             target="_blank"
             >open-sourced on GitHub</a
           >
-          by Lungelo Hadebe and hosted on Netlify</small
+          by Lungelo Hadebe and hosted on
+          <a href="https://snazzy-shortbread-5845b5.netlify.app" target="_blank"
+            >Netlify</a
+          ></small
         >
       </div>
     </div>
